--- a/gate_src/Makefile.am
+++ b/gate_src/Makefile.am
@@ -2,11 +2,11 @@ INCLUDES = \
 		   -I../common_src \
 		   -I../proto_src
 
-AM_CXXFLAGS = -Wall -g
+AM_CXXFLAGS =
 
 gate_LDADD = -lpthread -levent -lprotobuf
 
-bin_PROGRAMS = gate
+bin_PROGRAMS = gate 
 
 gate_SOURCES = \
 			   ../common_src/callback.cpp \
