--- a/center_src/Makefile.am
+++ b/center_src/Makefile.am
@@ -12,6 +12,7 @@ center_SOURCES = \
 			   ../common_src/callback.cpp \
 			   ../common_src/msg_protobuf.cpp \
 			   ../common_src/net.cpp \
+			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
 			   gate_rpc_callback.cpp \
 			   login_rpc_callback.cpp \
