--- a/center_src/Makefile.in
+++ b/center_src/Makefile.in
@@ -38,10 +38,7 @@ bin_PROGRAMS = center$(EXEEXT)
 subdir = center_src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
-	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
-	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
-	$(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -51,8 +48,9 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_center_OBJECTS = callback.$(OBJEXT) msg_protobuf.$(OBJEXT) \
-	net.$(OBJEXT) test.pb.$(OBJEXT) gate_rpc_callback.$(OBJEXT) \
-	login_rpc_callback.$(OBJEXT) main.$(OBJEXT)
+	net.$(OBJEXT) cmd_util.$(OBJEXT) test.pb.$(OBJEXT) \
+	gate_rpc_callback.$(OBJEXT) login_rpc_callback.$(OBJEXT) \
+	main.$(OBJEXT)
 center_OBJECTS = $(am_center_OBJECTS)
 center_DEPENDENCIES =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -198,6 +196,7 @@ center_SOURCES = \
 			   ../common_src/callback.cpp \
 			   ../common_src/msg_protobuf.cpp \
 			   ../common_src/net.cpp \
+			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
 			   gate_rpc_callback.cpp \
 			   login_rpc_callback.cpp \
@@ -291,6 +290,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/callback.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cmd_util.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gate_rpc_callback.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/login_rpc_callback.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
@@ -360,6 +360,20 @@ net.obj: ../common_src/net.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../common_src/net.cpp' object='net.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o net.obj `if test -f '../common_src/net.cpp'; then $(CYGPATH_W) '../common_src/net.cpp'; else $(CYGPATH_W) '$(srcdir)/../common_src/net.cpp'; fi`
+
+cmd_util.o: ../proto_src/cmd_util.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cmd_util.o -MD -MP -MF $(DEPDIR)/cmd_util.Tpo -c -o cmd_util.o `test -f '../proto_src/cmd_util.cpp' || echo '$(srcdir)/'`../proto_src/cmd_util.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/cmd_util.Tpo $(DEPDIR)/cmd_util.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../proto_src/cmd_util.cpp' object='cmd_util.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cmd_util.o `test -f '../proto_src/cmd_util.cpp' || echo '$(srcdir)/'`../proto_src/cmd_util.cpp
+
+cmd_util.obj: ../proto_src/cmd_util.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cmd_util.obj -MD -MP -MF $(DEPDIR)/cmd_util.Tpo -c -o cmd_util.obj `if test -f '../proto_src/cmd_util.cpp'; then $(CYGPATH_W) '../proto_src/cmd_util.cpp'; else $(CYGPATH_W) '$(srcdir)/../proto_src/cmd_util.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/cmd_util.Tpo $(DEPDIR)/cmd_util.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../proto_src/cmd_util.cpp' object='cmd_util.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cmd_util.obj `if test -f '../proto_src/cmd_util.cpp'; then $(CYGPATH_W) '../proto_src/cmd_util.cpp'; else $(CYGPATH_W) '$(srcdir)/../proto_src/cmd_util.cpp'; fi`
 
 test.pb.o: ../proto_src/test.pb.cc
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test.pb.o -MD -MP -MF $(DEPDIR)/test.pb.Tpo -c -o test.pb.o `test -f '../proto_src/test.pb.cc' || echo '$(srcdir)/'`../proto_src/test.pb.cc
