--- a/gate_src/Makefile.am
+++ b/gate_src/Makefile.am
@@ -12,6 +12,7 @@ gate_SOURCES = \
 			   ../common_src/callback.cpp \
 			   ../common_src/msg_protobuf.cpp \
 			   ../common_src/net.cpp \
+			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
 			   client_rpc_callback.cpp \
 			   gate_rpc_callback.cpp \
