--- a/gate_src/Makefile.in
+++ b/gate_src/Makefile.in
@@ -34,8 +34,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-bin_PROGRAMS = login$(EXEEXT)
-subdir = login_src
+bin_PROGRAMS = gate$(EXEEXT)
+subdir = gate_src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -47,12 +47,12 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_login_OBJECTS = callback.$(OBJEXT) msg_protobuf.$(OBJEXT) \
+am_gate_OBJECTS = callback.$(OBJEXT) msg_protobuf.$(OBJEXT) \
 	net.$(OBJEXT) cmd_util.$(OBJEXT) test.pb.$(OBJEXT) \
-	client_rpc_callback.$(OBJEXT) center_rpc_callback.$(OBJEXT) \
+	client_rpc_callback.$(OBJEXT) gate_rpc_callback.$(OBJEXT) \
 	main.$(OBJEXT)
-login_OBJECTS = $(am_login_OBJECTS)
-login_DEPENDENCIES =
+gate_OBJECTS = $(am_gate_OBJECTS)
+gate_DEPENDENCIES =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -66,8 +66,8 @@ CXXLD = $(CXX)
 CXXLINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(login_SOURCES)
-DIST_SOURCES = $(login_SOURCES)
+SOURCES = $(gate_SOURCES)
+DIST_SOURCES = $(gate_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -191,15 +191,15 @@ INCLUDES = \
 		   -I../proto_src
 
 AM_CXXFLAGS = 
-login_LDADD = -lpthread -levent -lprotobuf
-login_SOURCES = \
+gate_LDADD = -lpthread -levent -lprotobuf
+gate_SOURCES = \
 			   ../common_src/callback.cpp \
 			   ../common_src/msg_protobuf.cpp \
 			   ../common_src/net.cpp \
 			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
 			   client_rpc_callback.cpp \
-			   center_rpc_callback.cpp \
+			   gate_rpc_callback.cpp \
 			   main.cpp
 
 all: all-am
@@ -215,9 +215,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu login_src/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu gate_src/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu login_src/Makefile
+	  $(AUTOMAKE) --gnu gate_src/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -279,9 +279,9 @@ clean-binPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-login$(EXEEXT): $(login_OBJECTS) $(login_DEPENDENCIES) 
-	@rm -f login$(EXEEXT)
-	$(CXXLINK) $(login_OBJECTS) $(login_LDADD) $(LIBS)
+gate$(EXEEXT): $(gate_OBJECTS) $(gate_DEPENDENCIES) 
+	@rm -f gate$(EXEEXT)
+	$(CXXLINK) $(gate_OBJECTS) $(gate_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -290,9 +290,9 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/callback.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/center_rpc_callback.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/client_rpc_callback.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cmd_util.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gate_rpc_callback.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg_protobuf.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/net.Po@am__quote@
