--- a/configure.ac
+++ b/configure.ac
@@ -39,7 +39,9 @@ AC_CHECK_FUNCS([bzero memset strerror])
 
 AC_CONFIG_FILES([
                  Makefile
+                 cache_src/Makefile
                  center_src/Makefile
+                 game_src/Makefile
                  gate_src/Makefile
                  login_src/Makefile
                  ])
