--- a/center_src/Makefile.am
+++ b/center_src/Makefile.am
@@ -15,6 +15,7 @@ center_SOURCES = \
 			   ../common_src/net.cpp \
 			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
+			   game_rpc_callback.cpp \
 			   gate_rpc_callback.cpp \
 			   login_rpc_callback.cpp \
 			   main.cpp
