--- a/center_src/Makefile.am
+++ b/center_src/Makefile.am
@@ -9,14 +9,14 @@ center_LDADD = -lpthread -levent -lprotobuf
 bin_PROGRAMS = center 
 
 center_SOURCES = \
-			   ../common_src/callback.cpp \
+			   ../common_src/cb.cpp \
 			   ../common_src/log.cpp \
 			   ../common_src/msg_protobuf.cpp \
 			   ../common_src/net.cpp \
 			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
-			   game_rpc_callback.cpp \
-			   gate_rpc_callback.cpp \
-			   login_rpc_callback.cpp \
+			   game_cb.cpp \
+			   gate_cb.cpp \
+			   login_cb.cpp \
 			   main.cpp
 
