--- a/gate_src/Makefile.in
+++ b/gate_src/Makefile.in
@@ -50,10 +50,9 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_gate_OBJECTS = callback.$(OBJEXT) log.$(OBJEXT) \
-	msg_protobuf.$(OBJEXT) net.$(OBJEXT) cmd_util.$(OBJEXT) \
-	test.pb.$(OBJEXT) client_rpc_callback.$(OBJEXT) \
-	gate_rpc_callback.$(OBJEXT) main.$(OBJEXT)
+am_gate_OBJECTS = cb.$(OBJEXT) log.$(OBJEXT) msg_protobuf.$(OBJEXT) \
+	net.$(OBJEXT) cmd_util.$(OBJEXT) test.pb.$(OBJEXT) \
+	client_cb.$(OBJEXT) gate_cb.$(OBJEXT) main.$(OBJEXT)
 gate_OBJECTS = $(am_gate_OBJECTS)
 gate_DEPENDENCIES =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -196,14 +195,14 @@ INCLUDES = \
 AM_CXXFLAGS = 
 gate_LDADD = -lpthread -levent -lprotobuf
 gate_SOURCES = \
-			   ../common_src/callback.cpp \
+			   ../common_src/cb.cpp \
 			   ../common_src/log.cpp \
 			   ../common_src/msg_protobuf.cpp \
 			   ../common_src/net.cpp \
 			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
-			   client_rpc_callback.cpp \
-			   gate_rpc_callback.cpp \
+			   client_cb.cpp \
+			   gate_cb.cpp \
 			   main.cpp
 
 all: all-am
@@ -293,10 +292,10 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/callback.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/client_rpc_callback.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cb.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/client_cb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cmd_util.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gate_rpc_callback.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gate_cb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/log.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg_protobuf.Po@am__quote@
@@ -324,19 +323,19 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LTCXXCOMPILE) -c -o $@ $<
 
-callback.o: ../common_src/callback.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT callback.o -MD -MP -MF $(DEPDIR)/callback.Tpo -c -o callback.o `test -f '../common_src/callback.cpp' || echo '$(srcdir)/'`../common_src/callback.cpp
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/callback.Tpo $(DEPDIR)/callback.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../common_src/callback.cpp' object='callback.o' libtool=no @AMDEPBACKSLASH@
+cb.o: ../common_src/cb.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cb.o -MD -MP -MF $(DEPDIR)/cb.Tpo -c -o cb.o `test -f '../common_src/cb.cpp' || echo '$(srcdir)/'`../common_src/cb.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/cb.Tpo $(DEPDIR)/cb.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../common_src/cb.cpp' object='cb.o' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o callback.o `test -f '../common_src/callback.cpp' || echo '$(srcdir)/'`../common_src/callback.cpp
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cb.o `test -f '../common_src/cb.cpp' || echo '$(srcdir)/'`../common_src/cb.cpp
 
-callback.obj: ../common_src/callback.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT callback.obj -MD -MP -MF $(DEPDIR)/callback.Tpo -c -o callback.obj `if test -f '../common_src/callback.cpp'; then $(CYGPATH_W) '../common_src/callback.cpp'; else $(CYGPATH_W) '$(srcdir)/../common_src/callback.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/callback.Tpo $(DEPDIR)/callback.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../common_src/callback.cpp' object='callback.obj' libtool=no @AMDEPBACKSLASH@
+cb.obj: ../common_src/cb.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cb.obj -MD -MP -MF $(DEPDIR)/cb.Tpo -c -o cb.obj `if test -f '../common_src/cb.cpp'; then $(CYGPATH_W) '../common_src/cb.cpp'; else $(CYGPATH_W) '$(srcdir)/../common_src/cb.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/cb.Tpo $(DEPDIR)/cb.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../common_src/cb.cpp' object='cb.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o callback.obj `if test -f '../common_src/callback.cpp'; then $(CYGPATH_W) '../common_src/callback.cpp'; else $(CYGPATH_W) '$(srcdir)/../common_src/callback.cpp'; fi`
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cb.obj `if test -f '../common_src/cb.cpp'; then $(CYGPATH_W) '../common_src/cb.cpp'; else $(CYGPATH_W) '$(srcdir)/../common_src/cb.cpp'; fi`
 
 log.o: ../common_src/log.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT log.o -MD -MP -MF $(DEPDIR)/log.Tpo -c -o log.o `test -f '../common_src/log.cpp' || echo '$(srcdir)/'`../common_src/log.cpp
