--- a/login_src/Makefile.am
+++ b/login_src/Makefile.am
@@ -9,13 +9,13 @@ login_LDADD = -lpthread -levent -lprotobuf
 bin_PROGRAMS = login
 
 login_SOURCES = \
-			   ../common_src/callback.cpp \
+			   ../common_src/cb.cpp \
 			   ../common_src/log.cpp \
 			   ../common_src/msg_protobuf.cpp \
 			   ../common_src/net.cpp \
 			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
-			   client_rpc_callback.cpp \
-			   center_rpc_callback.cpp \
+			   client_cb.cpp \
+			   center_cb.cpp \
 			   main.cpp
 
