--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = center_src game_src gate_src login_src
+SUBDIRS = cache_src center_src client_src game_src gate_src login_src
