--- a/Makefile.in
+++ b/Makefile.in
@@ -217,7 +217,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = center_src game_src gate_src login_src
+SUBDIRS = cache_src center_src client_src game_src gate_src login_src
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
