--- a/client_src/Makefile.am
+++ b/client_src/Makefile.am
@@ -4,20 +4,17 @@ INCLUDES = \
 
 AM_CXXFLAGS =
 
-gate_LDADD = -lpthread -levent -lprotobuf
+cache_LDADD = -lpthread -levent -lprotobuf
 
-bin_PROGRAMS = gate 
+bin_PROGRAMS = cache
 
-gate_SOURCES = \
+cache_SOURCES = \
 			   ../common_src/cb.cpp \
 			   ../common_src/log.cpp \
 			   ../common_src/msg_protobuf.cpp \
 			   ../common_src/net.cpp \
 			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
-			   cache_cb.cpp \
-			   client_cb.cpp \
-			   center_cb.cpp \
-			   game_cb.cpp \
+			   server_cb.cpp \
 			   main.cpp
 
