--- a/gate_src/Makefile.in
+++ b/gate_src/Makefile.in
@@ -49,7 +49,8 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_gate_OBJECTS = cb.$(OBJEXT) log.$(OBJEXT) msg_protobuf.$(OBJEXT) \
 	net.$(OBJEXT) cmd_util.$(OBJEXT) test.pb.$(OBJEXT) \
-	client_cb.$(OBJEXT) gate_cb.$(OBJEXT) main.$(OBJEXT)
+	cache_cb.$(OBJEXT) client_cb.$(OBJEXT) center_cb.$(OBJEXT) \
+	game_cb.$(OBJEXT) main.$(OBJEXT)
 gate_OBJECTS = $(am_gate_OBJECTS)
 gate_DEPENDENCIES =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -198,8 +199,10 @@ gate_SOURCES = \
 			   ../common_src/net.cpp \
 			   ../proto_src/cmd_util.cpp \
 			   ../proto_src/test.pb.cc \
+			   cache_cb.cpp \
 			   client_cb.cpp \
-			   gate_cb.cpp \
+			   center_cb.cpp \
+			   game_cb.cpp \
 			   main.cpp
 
 all: all-am
@@ -289,10 +292,12 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cache_cb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cb.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/center_cb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/client_cb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cmd_util.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gate_cb.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/game_cb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/log.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg_protobuf.Po@am__quote@
