--- a/client_src/Makefile.in
+++ b/client_src/Makefile.in
@@ -34,7 +34,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-bin_PROGRAMS = cache$(EXEEXT)
+bin_PROGRAMS = client$(EXEEXT)
 subdir = client_src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -47,11 +47,11 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_cache_OBJECTS = cb.$(OBJEXT) log.$(OBJEXT) msg_protobuf.$(OBJEXT) \
+am_client_OBJECTS = cb.$(OBJEXT) log.$(OBJEXT) msg_protobuf.$(OBJEXT) \
 	net.$(OBJEXT) cmd_util.$(OBJEXT) test.pb.$(OBJEXT) \
 	server_cb.$(OBJEXT) main.$(OBJEXT)
-cache_OBJECTS = $(am_cache_OBJECTS)
-cache_DEPENDENCIES =
+client_OBJECTS = $(am_client_OBJECTS)
+client_DEPENDENCIES =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -65,8 +65,8 @@ CXXLD = $(CXX)
 CXXLINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(cache_SOURCES)
-DIST_SOURCES = $(cache_SOURCES)
+SOURCES = $(client_SOURCES)
+DIST_SOURCES = $(client_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -190,8 +190,8 @@ INCLUDES = \
 		   -I../proto_src
 
 AM_CXXFLAGS = 
-cache_LDADD = -lpthread -levent -lprotobuf
-cache_SOURCES = \
+client_LDADD = -lpthread -levent -lprotobuf
+client_SOURCES = \
 			   ../common_src/cb.cpp \
 			   ../common_src/log.cpp \
 			   ../common_src/msg_protobuf.cpp \
@@ -278,9 +278,9 @@ clean-binPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-cache$(EXEEXT): $(cache_OBJECTS) $(cache_DEPENDENCIES) 
-	@rm -f cache$(EXEEXT)
-	$(CXXLINK) $(cache_OBJECTS) $(cache_LDADD) $(LIBS)
+client$(EXEEXT): $(client_OBJECTS) $(client_DEPENDENCIES) 
+	@rm -f client$(EXEEXT)
+	$(CXXLINK) $(client_OBJECTS) $(client_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
